Fix overflow on repo names

--- a/app/css/sections/lists.styl
+++ b/app/css/sections/lists.styl
@@ -60,6 +60,8 @@
 .list-name {
   @extend .nowrap;
   max-width: 85%;
+  display: block;
+  float: left;
 }
 
 .list-unread-count {
